[gd_scene load_steps=6 format=3 uid="uid://dm6ihpqs40o62"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_abcde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.8, 0.2, 0.9)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_nd166"]
font_size = 19
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xth45"]
font_size = 120
font_color = Color(0, 0, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_abcde")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 45.0
theme_override_styles/background = SubResource("StyleBoxFlat_1")
theme_override_styles/fill = SubResource("StyleBoxFlat_2")
value = 50.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tip" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -198.0
offset_top = -292.0
offset_right = 187.0
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Use as setas para jogar
Espa√ßo ataca 
Duas vezes uma seta para dash
Combine dash com ataques para combos"
label_settings = SubResource("LabelSettings_nd166")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -263.0
offset_top = 85.0
offset_right = 278.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "2D JOUST"
label_settings = SubResource("LabelSettings_xth45")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -89.0
offset_top = 303.0
offset_right = 111.0
offset_bottom = 329.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -13.5
offset_right = 75.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
text = "INICIAR"

[node name="RestartButton" type="Button" parent="."]
offset_left = 1094.0
offset_top = 13.0
offset_right = 1136.0
offset_bottom = 54.0
